# vehicle-telemetry-fault-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
data/: sample_telemetry.csv
src/: FaultEvent.h  FaultMonitor.cpp  FaultMonitor.h  FaultRules.cpp  FaultRules.h  HealthState.cpp  HealthState.h  ReportWrite.cpp  ReportWriter.h  TelemetryRecord.cpp  TelemetryRecord.h  baseTest.csv  csvParse.cpp  main.cpp
tests/: run_tests.cpp
